data/apps/argocd/nifi/httproute-4.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nifi-route
  namespace: nifi
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway # Replace with your Traefik Gateway resource name
      namespace: traefik-system # Namespace where your Traefik Gateway is deployed
  hostnames:
    - "nifi.xxx.local"
  rules:
    - backendRefs:
        - name: nifi-cluster-nifi-external # Standard naming convention: <cluster-name>-<external-service-name>
          port: 8080
