data/apps/argocd/nifi/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nifi
  namespace: nifi
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - "nifi.xxx.com"
  rules:
    - backendRefs:
        - name: nifi-cluster-ip
          type: Service
          group: ""
          port: 8080
          weight: 1
